# sagemtl

./: .editorconfig  .gitignore  LICENSE  README.md  cli.py  mkdocs.yml  pyproject.toml  pyproject.toml.bak-20251031-191039
.out-batch/: sample.txt  texts.jsonl
docs/: index.md
sagemtl/: __init__.py  __main__.py  cli.py
sagemtl/clean/: __init__.py  text.py  text_normalize.py
sagemtl/crawl/: __init__.py  batch.py  extract.py  http.py
sagemtl/mtl/: translate.py
tests/: test_clean.py  test_cli.py  test_cli_crawl.py  test_extract.py  test_normalize.py  test_text_normalize.py
