# pyproject.toml (clean)
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemtl"
version = "0.0.1"
description = "SageMTL toolchain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
crawl = ["httpx[http2]", "beautifulsoup4", "lxml", "selectolax", "playwright", "pandas"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "pymdown-extensions"]

[project.scripts]
sagemtl = "sagemtl.cli:main"

[tool.setuptools.packages.find]
include = ["sagemtl*"]
exclude = ["data*", "tests*"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["sagemtl"]


[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
