[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemtl"
version = "0.0.1"
description = "SageMTL toolchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["sagemtl*"]
exclude = ["data*", "tests*"]

[project.optional-dependencies]
crawl = ["beautifulsoup4>=4.12", "lxml>=5.3", "selectolax>=0.3.21", "httpx[http2]>=0.25"]
docs  = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "pymdown-extensions"]

[project.scripts]
sagemtl = "sagemtl.cli:main"